upgrade the Heart library to v7.4.1