@@ -7,23 +7,21 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-ext.jme3Version = '3.5.0-stable' // from mavenCentral
+ext.jme3Version = '3.5.0-stable'
 
 tasks.withType(JavaCompile) { // Java compile-time options:
     options.compilerArgs << '-Xdiags:verbose'
     options.compilerArgs << '-Xlint:unchecked'
-    options.deprecation = true
+    options.deprecation = true // to provide detailed deprecation warnings
     options.encoding = 'UTF-8'
 }
 
 tasks.withType(JavaExec) { // Java runtime options:
     args = []
     classpath sourceSets.main.runtimeClasspath
-    //debug true
     enableAssertions true
     //jvmArgs '-verbose:gc'
     //jvmArgs '-Xms512m', '-Xmx512m'
-    //jvmArgs '-XX:+UseConcMarkSweepGC'
     jvmArgs '-XX:+UseG1GC', '-XX:MaxGCPauseMillis=10'
 }
 
@@ -34,12 +32,12 @@ if (!hasProperty('mainClass')) {
 jar.manifest.attributes('Main-Class': mainClassName)
 
 repositories {
-    //mavenLocal()
+    //mavenLocal() // to use local SNAPSHOTs of libraries
     mavenCentral()
 }
 
 dependencies {
-    implementation 'com.github.stephengold:Heart:7.3.0'
+    implementation 'com.github.stephengold:Heart:7.4.1'
     implementation 'com.github.stephengold:Acorus:0.9.9'
     implementation 'com.github.stephengold:jme3-utilities-x:0.3.0'
     implementation 'com.github.stephengold:tonegodgui:0.1.6'
